# stock-manager

./: .coveragerc  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BOT_GUIDELINE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  HTS_OPENAPI.xlsx  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  setup.sh
.agents/skills/harness-diagnostics/: SKILL.md
.claude/: iteration1-analysis.md  iteration2-analysis.md  iteration3-analysis.md  iteration4-5-analysis.md  settings.json
.claude/agents/invest_expert/: expert-investor-buffett.md  expert-investor-dalio.md  expert-investor-graham.md  expert-investor-wood.md
.claude/hooks/: README.md  agent_stop_guideline_gate.py  quality-checklist.json
.claude/invest_expert/: expert-investor-lynch.md  expert-investor-soros.md
.claude/senior_engineer/: expert-dev-architect.md  expert-dev-python.md  expert-dev-tdd.md
.github/workflows/: ci.yml  drift-gc.yml  nightly-full-suite.yml
.moai/config/: config.yaml
.moai/reports/: ddd-implementation-SPEC-CLI-001.md  ddd-report-SPEC-BACKEND-API-001-P3-Milestone-1.md  sync-report-2026-01-23-224032.md  sync-report-2026-01-25-014434.md  sync-report-2026-01-25-130911.md  sync-report-2026-01-25-134719.md  sync-report-2026-01-25-223238.md  sync-report-2026-01-26-230354.md  sync-report-2026-01-27-225750.md
.omc/sessions/: 400ab8f1-1dee-4ba2-9406-ebb53ceb497d.json
.omc/state/: ralph-state.json  setup-state.json  subagent-tracking.json  ultrawork-state.json
.sisyphus/evidence/: mock-promotion-gate.json
ai_developer_guides/: AI_USAGE_GUIDE.md  DB_SCHEMA_DDL.md  DEVELOPER_PLAN.md  DEVELOPER_SPEC.md  SCHEMA_STATE_DIAGRAMS.md  SLACK_NOTIFICATION_GUIDE.md
db/migrations/: 0001_init.sql  0002_add_order_fill_fields.sql
docs/: ARCHITECTURE.md  DATABASE_SETUP.md  SPEC-BACKEND-WORKER-004-implementation-plan.md  architecture.md  execution-diagrams.md  glossary.md  harness-engineering-plan.md  harness-week1-execution-plan.md  kis-endpoint-guardrails.md  knowledge-map.md  lock_service_api.md  quality-gates.md  runtime-trading-guardrails.md  worker_main_api.md
docs/adr/: 0001-mock-first-safety-gate.md  0002-coverage-threshold-85.md  0003-kis-broker-adapter-pattern.md  0004-disk-backed-oauth-token-cache.md  0005-investor-persona-consensus-model.md  0006-hybrid-rule-llm-persona-evaluation.md  0007-threading-concurrency-strategy.md  0008-pydantic-settings-dataclasses-split.md  0009-kis-endpoint-authority-and-mode-isolation.md  0010-engine-market-hours-enforcement-by-mode.md  README.md
docs/kis-openapi/: 01-authentication.md  02-account-info.md  03-orders.md  04-execution.md  05-market-data.md  06-sector.md  07-basic-info.md  08-financial.md  09-schedule.md  10-ranking.md  11-realtime.md  12-watchlist.md  13-market-trend.md  14-pension.md  15-after-hours.md  finance-payload-contract.md  index.md  quotations-payload-contract.md
docs/slack-sm-ai/: README.md
docs/slack-sm-human/: README.md
docs_raw/: categories.json  template.md  매수가능조회[v1_국내주식-007].xlsx  주식잔고조회[v1_국내주식-006].xlsx
ideation/: auto_trading_ideas.md
scripts/: fix_domestic_await.py  fix_existing_docs.py  generate_api_docs.py  generate_kis_apis.py  kis_slack_check.py  mock_qa_gate.py  parse_kis_excel.py  reorganize_categories.py  validate_docs.py  validate_kis_endpoint_policy.py
scripts/hooks/: pre-commit
src/stock_manager/: main.py
stock_manager/: __init__.py  engine.py  main.py  types.py
stock_manager/api/: __init__.py  health.py
stock_manager/backtesting/: __init__.py  config.py  data_loader.py  engine.py  metrics.py  portfolio.py  report.py  snapshot_builder.py
stock_manager/cli/: __init__.py  doctor.py  setup_wizard.py  trading_commands.py  verify_commands.py
stock_manager/config/: __init__.py  env_writer.py  logging_config.py  paths.py
stock_manager/dashboard/: __init__.py  provider.py
stock_manager/monitoring/: __init__.py  price_monitor.py  reconciler.py
stock_manager/notifications/: __init__.py  backends.py  config.py  formatters.py  models.py  noop.py  notifier.py
stock_manager/persistence/: __init__.py  recovery.py  state.py
stock_manager/pipeline/: __init__.py  indicators.py
stock_manager/qa/: __init__.py  mock_gate.py
stock_manager/slack_bot/: __init__.py  app.py  command_parser.py  formatters.py  session_manager.py
stock_manager/storage/: __init__.py  sqlite_backend.py
stock_manager/trading/: __init__.py  executor.py  guardrails.py  models.py  positions.py  rate_limiter.py  risk.py
templates/: api_doc_template.md.j2
tests/: __init__.py  conftest.py
tests/characterization/: test_consensus_tuning.py  test_fetcher_behavior.py  test_persona_behavior.py  test_runner_behavior.py  test_threshold_calibration.py
tests/cli/: test_cli_integration.py  test_main.py  test_main_unit.py
tests/factories/: __init__.py  mock_responses.py  test_data.py
tests/fixtures/: README.md  __init__.py  kis_responses.py  test_kis_responses_example.py
tests/integration/: __init__.py  conftest.py  test_consensus_quality.py  test_trading_simulation.py
tests/slack_bot/: test_command_parser.py  test_formatters.py  test_session_manager.py
tests/unit/: __init__.py  test_ab_comparison.py  test_backtesting.py  test_buy_specialist.py  test_circuit_breaker.py  test_cli_main.py  test_client.py  test_config.py  test_consensus_pipeline.py  test_dalio_hybrid_persona.py  test_doctor.py  test_engine.py  test_engine_notifications.py  test_env_writer.py  test_exceptions.py  test_fetcher_rate_payload_policy.py  test_graham.py  test_guardrails.py  test_hybrid_persona_wrapper.py  test_indicators_ohlcv.py  test_infrastructure.py  test_kis_broker_adapter.py  test_kis_live_contracts.py  test_kis_token_cache.py  test_kis_websocket_client.py  test_logging_config.py  test_metrics_cache.py  test_mock_qa_gate.py  test_models.py  test_ohlcv_cache.py  test_order_executor.py  test_paths.py  test_personas_coverage.py  test_pipeline_formatters.py  test_pipeline_logger.py  test_pipeline_monitor.py  test_pipeline_runner.py  test_pipeline_slack_routing.py  test_positions.py  test_positions_threading.py  (+20 more)
(+593 files in other folders)
