[project]
name = "stock-manager"
version = "0.1.0"
description = "Automated trading bot boilerplate (Python 3.13)"
readme = "README.md"
 requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
 dependencies = [
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "websocket-client>=1.7",
  "rich>=13.8",
  "typer>=0.12",
  "slack-sdk>=3.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "rich>=13.8",
  "psycopg2-binary>=2.9",
  "jinja2>=3.1",
  "openpyxl>=3.1",
]


[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-mock>=3.12", "pytest-cov>=4.1", "pytest-asyncio>=0.23"]
cli = ["typer>=0.12"]

[project.scripts]
stock-manager = "stock_manager.main:main"

[tool.ruff]
line-length = 100

target-version = "py313"

[tool.pytest.ini_options]
# Pytest configuration for KIS API tests (Kent Beck TDD style)
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=stock_manager",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",  # Working toward 85% target
]
asyncio_mode = "auto"
markers = [
    "red: Tests that document expected failures (RED phase)",
    "green: Tests that verify fixes (GREEN phase)",
    "refactor: Tests that validate refactoring (REFACTOR phase)",
    "slow: Tests that take more than 1 second",
    "integration: marks tests as integration tests (requires external services)",
    "unit: Unit tests (isolated, fast)",
    "tdd: Tests following TDD methodology",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]
