[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-manager"
version = "0.1.0"
description = "Automated trading bot boilerplate (Python 3.10+)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Your Name" }]
dependencies = [
  "httpx>=0.27",
  "jinja2>=3.1",
  "openpyxl>=3.1",
  "psycopg2-binary>=2.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "rich>=13.8",
  "slack-bolt>=1.18",
  "slack-sdk>=3.27",
  "typer>=0.12",
  "websocket-client>=1.7",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "pytest-cov>=4.1", "pytest-mock>=3.12"]
cli = ["typer>=0.12"]

[project.scripts]
stock-manager = "stock_manager.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stock_manager*"]
exclude = ["tests*", "docs*", "scripts*", "src*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--cov=stock_manager",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-fail-under=85",
]
asyncio_mode = "auto"
markers = [
  "red: Tests that document expected failures (RED phase)",
  "green: Tests that verify fixes (GREEN phase)",
  "refactor: Tests that validate refactoring (REFACTOR phase)",
  "slow: Tests that take more than 1 second",
  "integration: marks tests as integration tests (requires external services)",
  "unit: Unit tests (isolated, fast)",
  "tdd: Tests following TDD methodology",
]

[dependency-groups]
dev = [
  "import-linter>=2.10",
  "mypy>=1.19.1",
  "ruff>=0.14.14",
]

[tool.importlinter]
root_package = "stock_manager"
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
id = "adapters_must_not_import_trading"
name = "Adapters must not import trading layer"
type = "forbidden"
source_modules = ["stock_manager.adapters"]
forbidden_modules = ["stock_manager.trading"]

[[tool.importlinter.contracts]]
id = "trading_must_not_import_cli"
name = "Trading layer must not import CLI layer"
type = "forbidden"
source_modules = ["stock_manager.trading"]
forbidden_modules = ["stock_manager.cli"]

[[tool.importlinter.contracts]]
id = "trading_must_not_import_notifications"
name = "Trading layer must not import notifications"
type = "forbidden"
source_modules = ["stock_manager.trading"]
forbidden_modules = ["stock_manager.notifications"]

[tool.coverage.run]
omit = [
  "*/stock_manager/adapters/*",
  "*/stock_manager/api/*",
  "*/stock_manager/cli/*",
  "*/stock_manager/config/*",
  "*/stock_manager/dashboard/*",
  "*/stock_manager/main.py",
  "*/stock_manager/notifications/*",
  "*/stock_manager/storage/*",
  "*/stock_manager/trading/reflexivity/*",
  "*/stock_manager/trading/strategies/graham.py",
]

[tool.coverage.report]
omit = [
  "*/stock_manager/adapters/*",
  "*/stock_manager/api/*",
  "*/stock_manager/cli/*",
  "*/stock_manager/config/*",
  "*/stock_manager/dashboard/*",
  "*/stock_manager/main.py",
  "*/stock_manager/notifications/*",
  "*/stock_manager/storage/*",
  "*/stock_manager/trading/reflexivity/*",
  "*/stock_manager/trading/strategies/graham.py",
]
